# haskell-template

./: README.md  flake.nix  haskell-template.cabal  hie.yaml
src/: Main.hs
