cabal-version:      2.4
name:               haskell-template
version:            0.1.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  build-depends:
    , base          >=4.13.0.0 && <4.18.0.0.0

  hs-source-dirs:     src
  default-language:   Haskell2010

executable haskell-template
  import:  shared
  main-is: Main.hs
